--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,10 @@ tester/moss
 # Ignore Testing Assignment
 assignments/
 
+# Ignore for ProIF purpose
 .DS_Store
 TestFile.html
+application/vendor/composer/
+application/vendor/phpunit/
+application/vendor/sebastian/
+application/vendor/theseer/
