cleaning up unnecessary codes and files

--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,8 @@ assignments/
 
 # Ignore for ProIF purpose
 .DS_Store
+application/.DS_Store
 TestFile.html
 application/vendor/
+composer.json
+composer.lock
