--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 before_install:
   - cp application/config/database.example.php application/config/database.php
   - cp application/config/secrets.example.php application/config/secrets.php
-  - mysql -e 'CREATE DATABASE sharifjudge;'
+  - sudo mysql -e 'CREATE DATABASE sharifjudge;'
 env:
   matrix:
     - DRIVER="xdebug"
