--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ before_install:
 before_script:
   - sudo mysql -e 'CREATE DATABASE sharifjudge;'
 env:
-  matrix:
-    - DRIVER="xdebug"
+    -DB="mysql"
+    matrix:
+        - DRIVER="xdebug"
 script:
     - php index.php TestUnit
