--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
 language: php
 php:
-    - 7.1
     - 7.2
-    - 7.3
 services:
     - mysql
 before_install:
     - cp application/config/database.example.php application/config/database.php
     - cp application/config/secrets.example.php application/config/secrets.php
-before_script:
     - sudo mysql -e 'CREATE DATABASE sharifjudge;'
+    - composer self-update
 env:
     matrix:
         - DRIVER="xdebug"
